updated files formatting + minor details

--- a/views/cities.hbs
+++ b/views/cities.hbs
@@ -75,6 +75,7 @@ $(document).ready(function () {
 </div>
 <p>&nbsp;</p>
 
+{{!-- Search for a city below --}}
 <div class="form-fields" id="search-city" style="display: block">
     <h2>Search for a City below.</h2>
     <p>Search by City name using the field below. Partial names are OK too!</p>
@@ -88,6 +89,7 @@ $(document).ready(function () {
 </div>
 <p>&nbsp;</p>
 
+{{!-- Add a new city to the db using HTML --}}
 <div class="form-fields" id="add-city">
     <h2>Add a new city: </h2>
     <p>To add a new city, please enter the information below and click 'Submit'! </p> 
