--- a/views/cuisines.hbs
+++ b/views/cuisines.hbs
@@ -75,6 +75,7 @@ $(document).ready(function () {
 </div>
 <p>&nbsp;</p>
 
+{{!-- Search for a cuisine --}}
 <div class="form-fields" id="search-cuisine" style="display: block">
     <h2>Search for a Cuisine below.</h2>
     <p>Search by Cuisine name using the field below. Partial names are OK too!</p>
@@ -88,6 +89,7 @@ $(document).ready(function () {
 </div>
 <p>&nbsp;</p>
 
+{{!-- Add a new cuisine using HTML --}}
 <div class="form-fields" id="add-cuisine">
     <h2>Add a new cuisine: </h2>
     <p>To add a new cuisine, please enter the information below and click 'Submit'! </p> 
