--- a/views/restaurant_has_cuisines.hbs
+++ b/views/restaurant_has_cuisines.hbs
@@ -80,6 +80,7 @@ $(document).ready(function () {
 </div>
 <p>&nbsp;</p>
 
+{{!-- Search for a restaurant-cuisine association --}}
 <div class="form-fields" id="search-restaurant-cuisine">
     <h2>Search for a Restaurants' Cuisine below.</h2>
     <p>Search by restaurant or name using the fields below. Partial names are OK too!</p>
