--- a/views/restaurants.hbs
+++ b/views/restaurants.hbs
@@ -71,6 +71,10 @@ $(document).ready(function () {
         <tr data-value={{this.restaurant_id}} scope="row">
             <td>{{this.restaurant_id}}</td>
             <td>{{this.restaurant_name}}</td>
+            {{!-- "If" helper to conditionally render NULL values --}}
+            {{!-- Date: 11/06/2022 --}}
+            {{!-- Adapted from the handlebars helper files --}}
+            {{!-- Source: https://handlebarsjs.com/guide/builtin-helpers.html#if --}}
             {{#if this.restaurant_website}}
                 <td>{{this.restaurant_website}}</td>
             {{else}}
@@ -94,6 +98,7 @@ $(document).ready(function () {
 
 <p>&nbsp;</p>
 
+{{!-- Search for a restaurant --}}
 <div class="form-fields" id="search-restaurant" style="display: block">
     <h2>Search for a Restaurant below.</h2>
     <p>Search by restaurant name using the field below. Partial names are OK too!</p>
