--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,7 +2,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1", shrink-to-fit="yes">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"/>
-    {{!-- <link rel="stylesheet" type="text/css" href="extensions/filter-control/bootstrap-table-filter-control.css"/> --}}
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.css">
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
     <title>Grubmaster</title>
@@ -71,6 +70,8 @@
 
 <script>
   // show or hide instructions based on whether button db-instructions was clicked
+  // Date: 11/23/2022
+  // Copied code 
   // Source: https://sebhastian.com/javascript-show-hide-div-onclick-toggle/#:~:text=To%20display%20or%20hide%20a,which%20is%20block%20)%20to%20none%20.
   const targetDiv = document.getElementById("db-instructions"); 
   const btn = document.getElementById("toggle");
