updated data validation for add reviews

--- a/views/reviews.hbs
+++ b/views/reviews.hbs
@@ -103,7 +103,7 @@ $(document).ready(function () {
                 <option value="{{this.restaurant_id}}">{{this.restaurant_name}}</option>
                 {{/each}}
             </select></p>
-        <p><label>* Rating: </label>
+        <p><label>Rating: </label>
             <select name="review_restaurant_rating" id="review_restaurant_rating" required>
                 <option value="">Select a Rating</option>
                 <option value="1">1</option>
