fixed typo on restaurant cuisine update

--- a/views/restaurant_has_cuisines.hbs
+++ b/views/restaurant_has_cuisines.hbs
@@ -83,7 +83,7 @@ $(document).ready(function () {
 {{!-- Search for a restaurant-cuisine association --}}
 <div class="form-fields" id="search-restaurant-cuisine">
     <h2>Search for a Restaurants' Cuisine below.</h2>
-    <p>Search by restaurant or name using the fields below. Partial names are OK too!</p>
+    <p>Search for a restaurant's cuisines by entering the restaurant name below. Partial names are OK too!</p>
     <form id="search-restaurant-cuisine-form" method='GET' action='/restaurant_has_cuisines'>
         <label for="input-rc-restaurant-search">Search by Restaurant Name: </label>
         <input type="text" name="rc_restaurantSearch" id="input-rc-restaurant-search">
